# advent-of-code-2021

./: Cargo.toml
assets/: day-1.ron  day-10-test.ron  day-10.ron  day-11-test.ron  day-11.ron  day-12-test.ron  day-12.ron  day-13-test.ron  day-13.ron  day-14-test.ron  day-14.ron  day-15-test-con.ron  day-15-test.ron  day-15.ron  day-16-test.ron  day-16.ron  day-18-test.ron  day-18.ron  day-19-test.ron  day-19.ron  day-2.ron  day-20-test.ron  day-20.ron  day-22-test.ron  day-22.ron  day-23-test.ron  day-23.ron  day-24-reduced.ron  day-24-test.ron  day-24.ron  day-25-test.ron  day-25.ron  day-3-test.ron  day-3.ron  day-4.ron  day-5-test.ron  day-5.ron  day-6.ron  day-7-test.ron  day-7.ron  (+4 more)
excel/: day3.xlsx  day6.xlsx  day7.xlsx
src/: lib.rs  main.rs  util.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
