[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Sam <samuelkeiffer@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dependencies]
assets_manager = {version = "0.6.0", features = ["ron"]}
serde = { version = "1.0.110", features = ["derive"] }
itertools = "0.9.0"
pathfinding = "3.0.5"
bitvec = "0.20.1"
vek = "0.15.4"
rayon = "1.5.1"